--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,9 +1,9 @@
 <h2>Products</h2>
 
-<div *ngFor="let product of products">
+<div *ngFor="let product of products; index as productId">
 
   <h3>
-    <a [title]="product.name + ' details'">
+    <a [title]="product.name + ' details'" [routerLink]="['/products', productId]">
       {{ product.name }}
     </a>
   </h3>
@@ -12,15 +12,15 @@
     Description: {{ product.description }}
   </p>
 
-<button (click)="share()">
+ <button (click)="share()">
   Share
-</button>
+ </button>
 
-<app-product-alerts
+ <app-product-alerts
   [product]="product" 
   (notify)="onNotify()">
-</app-product-alerts>
-
+ </app-product-alerts>
+</div>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
