--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -25,6 +25,6 @@
     <input id="address" type="text" formControlName="address">
   </div>
 
-  <button class="button" type="submit">Purchases</button>
+  <button class="button" type="submit">Purchase</button>
 
 </form>
